--- a/config.json
+++ b/config.json
@@ -5,13 +5,13 @@
   "sql_port": "3306",
   "sql_dbname": "onlinebooks",
   "sql_init_queries": [
-    "CREATE TABLE IF NOT EXISTS Listings (id INT NOT NULL AUTO_INCREMENT PRIMARY KEY, title TEXT NOT NULL, description TEXT NOT NULL, isbn TEXT NOT NULL, price DECIMAL(13,4), category TEXT NOT NULL, seller TEXT NOT NULL, listing_password TEXT NOT NULL, status TEXT NOT NULL, buyer TEXT, billing_info TEXT, shipping_info TEXT)"
+    "CREATE TABLE IF NOT EXISTS Listings (id INT NOT NULL AUTO_INCREMENT PRIMARY KEY, title TEXT NOT NULL, description TEXT NOT NULL, isbn TEXT NOT NULL, price DECIMAL(13,4) NOT NULL, category TEXT NOT NULL, seller TEXT NOT NULL, listing_password TEXT NOT NULL, status TEXT NOT NULL, buyer TEXT, billing_info TEXT, shipping_info TEXT)"
   ],
   "sql_queries": {
-    "select_all_active_listings": "",
+    "select_all_active_listings": "SELECT title,description,isbn,price,category,seller_name FROM Listings WHERE status='active'",
     "select_listing_public": "",
     "select_listing_private": "",
-    "create_listing": "INSERT INTO Listings (title, description, isbn, price, category, seller, listing_password, status, buyer) VALUES ?",
+    "create_listing": "INSERT INTO Listings (title, description, isbn, price, category, seller, listing_password, status) VALUES (?, ?, ?, ?, ?, ?, ?, ?)",
     "search_listings": "",
     "update_listing": "",
     "delete_listing": ""
