--- a/config.json
+++ b/config.json
@@ -12,7 +12,7 @@
     "select_listing_public": "SELECT id,title,description,isbn,price,category,seller FROM Listings WHERE id=? LIMIT 1",
     "select_listing_private": "",
     "create_listing": "INSERT INTO Listings (title, description, isbn, price, category, seller, listing_password, status) VALUES (?, ?, ?, ?, ?, ?, ?, ?)",
-    "search_listings": "SELECT * FROM Listings WHERE title LIKE '%book%' OR description LIKE '%?%' OR isbn LIKE '%?%'",
+    "search_listings": "SELECT * FROM Listings WHERE MATCH (title, description, isbn) AGAINST (?)",
     "update_listing": "",
     "delete_listing": ""
   }
