--- a/config.json
+++ b/config.json
@@ -14,6 +14,7 @@
     "create_listing": "INSERT INTO Listings (title, description, isbn, price, category, seller, listing_password, status) VALUES (?, ?, ?, ?, ?, ?, ?, ?)",
     "search_listings": "",
     "update_listing": "",
-    "delete_listing": ""
+    "delete_listing": "",
+    "purchase_listing": "UPDATE Listings SET status=\"purchased\", buyer=?, billing_info=?, shipping_info=? WHERE id=?"
   }
 }
