--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
   "sql_queries": {
     "select_all_active_listings": "SELECT id,title,description,isbn,price,category,seller,status FROM Listings WHERE status='active' OR status='purchased'",
     "select_listing_public": "SELECT id,title,description,isbn,price,category,seller,status FROM Listings WHERE id=? LIMIT 1",
-    "select_listing_private": "",
+    "select_listing_private": "SELECT buyer,billing_info,shipping_info FROM Listings WHERE id=? LIMIT 1",
     "create_listing": "INSERT INTO Listings (title, description, isbn, price, category, seller, listing_password, status) VALUES (?, ?, ?, ?, ?, ?, ?, ?)",
     "search_listings": "",
     "update_listing": "",
