--- a/config.json
+++ b/config.json
@@ -14,7 +14,7 @@
     "select_listing_private": "SELECT buyer,billing_info,shipping_info FROM Listings WHERE id=? LIMIT 1",
     "create_listing": "INSERT INTO Listings (title, description, isbn, price, category, seller, listing_password, status) VALUES (?, ?, ?, ?, ?, ?, ?, ?)",
     "search_listings": "",
-    "update_listing": "UPDATE Listings SET title = ? WHERE id = ?",
+    "update_listing": "UPDATE Listings SET title = ?, description = ?, isbn = ?, price = ?, category = ?, seller = ? WHERE id = ?",
     "delete_listing": "DELETE FROM Listings WHERE id = ?",
     "select_password":"SELECT listing_password FROM Listings WHERE id=? LIMIT 1",
     "purchase_listing": "UPDATE Listings SET status=\"purchased\", buyer=?, billing_info=?, shipping_info=? WHERE id=?"
